# rGST-Paris

./: README.md  pyproject.toml
01_processing_scripts/: s0_process_data.py  s1_calculate_climtrace_gmst.py  s2_calculate_climtrace_gsat.py  s3_calculate_decadal_means_trend_rates.py  s4_process_scenario_data.py  s5_test_acceleration.py  s6_calculate_recent_trends.py  s7_calculate_gmst2gsat_factors.py
02_output_data/: ERA5_global_1991-2023_TrendProfile.csv  ERA5_global_1991-2023_TrendProfile_1sigma.csv  ERA5_land_1991-2023_TrendProfile.csv  ERA5_land_1991-2023_TrendProfile_1sigma.csv  ERA5_ocean_1991-2023_TrendProfile.csv  ERA5_ocean_1991-2023_TrendProfile_1sigma.csv  GMST2GSATfactors_ERA5toClimTrace.csv  IAPv4_1991-2023_TrendProfile.csv  IAPv4_1991-2023_TrendProfile_1sigma.csv  SurfTempTrendRateUncerts_1991-2023_AllDatasets.csv  SurfTempTrendRates_1991-2023_AllDatasets.csv  gmst_annual_climtrace_1850-2024.csv  gmst_annual_nino34_ERSSTlag3smooth5_volclag7smooth5_climtrace_1850-2024.csv  gmst_decadalmean_climtrace_1850-2040.csv  gmst_decadalmean_nino34_ERSSTlag3smooth5_volclag7smooth5_climtrace_1850-2040.csv  gmst_deriv_scenarios_climtrace_1850-2100.csv  gmst_deriv_scenarios_nino34_ERSSTlag3smooth5_volclag7smooth5_climtrace_1850-2100.csv  gmst_scenarios_climtrace_1850-2100.csv  gmst_scenarios_nino34_ERSSTlag3smooth5_volclag7smooth5_climtrace_1850-2100.csv  gsat_annual_climtrace_1850-2024.csv  gsat_annual_nino34_ERSSTlag3smooth5_volclag7smooth5_climtrace_1850-2024.csv  gsat_decadalmean_climtrace_1850-2040.csv  gsat_deriv_scenarios_climtrace_1850-2100.csv  (+5 more)
(+69 files in other folders)
