[project]
name = "rGST"
version = "1.0.0"
description = "ClimTrace data processing and visualization"
authors = [
    {name = "Moritz Pichler"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "xarray (>=2025.1.2,<2026.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipdb = "^0.13.13"
ipython = "^8.31.0"

[tool.black]
line-length = 79
